core/compiler/tests/programs/type_err/generic_1.loz
f :: [a] [b] -> [(a, a)]
f [a : as] [b : bs] = [(a, b) : f a b]

main = f ["String", "Strang", "Strung"] [2, 3, 4]